--- a/Jdempotent-core/pom.xml
+++ b/Jdempotent-core/pom.xml
@@ -45,8 +45,8 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring.boot.version>3.1.1</spring.boot.version>
-        <spring.framework.version>6.0.10</spring.framework.version>
+        <spring.boot.version>3.1.3</spring.boot.version>
+        <spring.framework.version>6.0.11</spring.framework.version>
         <mockito.version>5.3.1</mockito.version>
         <mockito-inline.version>5.2.0</mockito-inline.version>
     </properties>
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.9.3</version>
+            <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
-            <version>1.9.3</version>
+            <version>1.10.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -133,7 +133,19 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
+            <version>3.13.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230618</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter</artifactId>
+            <version>4.0.4</version>
         </dependency>
     </dependencies>
 
