--- a/Jdempotent-spring-boot-couchbase-starter/pom.xml
+++ b/Jdempotent-spring-boot-couchbase-starter/pom.xml
@@ -44,7 +44,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring.boot.version>3.1.1</spring.boot.version>
+        <spring.boot.version>3.1.3</spring.boot.version>
         <spring.framework.version>6.0.10</spring.framework.version>
         <mockito.version>5.3.1</mockito.version>
         <mockito-inline.version>5.2.0</mockito-inline.version>
@@ -123,6 +123,12 @@
             <artifactId>junit-platform-launcher</artifactId>
             <version>1.9.3</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230618</version>
         </dependency>
     </dependencies>
 
