--- a/Jdempotent-spring-boot-redis-starter/pom.xml
+++ b/Jdempotent-spring-boot-redis-starter/pom.xml
@@ -45,8 +45,8 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring.boot.version>3.1.1</spring.boot.version>
-        <spring.framework.version>6.0.10</spring.framework.version>
+        <spring.boot.version>3.1.3</spring.boot.version>
+        <spring.framework.version>6.0.11</spring.framework.version>
         <mockito.version>5.3.1</mockito.version>
         <mockito-inline.version>5.2.0</mockito-inline.version>
     </properties>
@@ -104,6 +104,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring.boot.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230618</version>
         </dependency>
     </dependencies>
 
