--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,10 @@
 
     <properties>
         <java.version>17</java.version>
-        <spring.boot.version>3.1.1</spring.boot.version>
-        <spring.framework.version>6.0.10</spring.framework.version>
+        <spring.boot.version>3.1.3</spring.boot.version>
+        <spring.framework.version>6.0.11</spring.framework.version>
+
+        <spring-cloud-dependencies.version>2022.0.4</spring-cloud-dependencies.version>
     </properties>
 
     <modules>
@@ -84,8 +86,24 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.12.0</version>
+                <version>3.13.0</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20230618</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
